--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=162,188
-Size=346,193
+Pos=452,443
+Size=346,191
 Collapsed=0
 
 [Window][Another Window]
@@ -31,6 +31,11 @@ Collapsed=0
 [Window][Stacked 2]
 Pos=520,345
 Size=226,71
+Collapsed=0
+
+[Window][Stock Manager]
+Pos=50,50
+Size=800,600
 Collapsed=0
 
 [Table][0xC9935533,3]
