随便写了个about

--- a/imgui.ini
+++ b/imgui.ini
@@ -38,6 +38,21 @@ Pos=200,50
 Size=800,600
 Collapsed=0
 
+[Window][Stock Manager Program]
+Pos=200,50
+Size=800,600
+Collapsed=0
+
+[Window][Login]
+Pos=200,50
+Size=800,600
+Collapsed=0
+
+[Window][About Window]
+Pos=403,313
+Size=458,135
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
