顶部菜单权限控制 交互逻辑

--- a/imgui.ini
+++ b/imgui.ini
@@ -44,13 +44,18 @@ Size=800,600
 Collapsed=0
 
 [Window][Login]
-Pos=200,50
+Pos=250,50
 Size=800,600
 Collapsed=0
 
 [Window][About Window]
 Pos=403,313
 Size=458,135
+Collapsed=0
+
+[Window][Login Needed!]
+Pos=453,344
+Size=332,75
 Collapsed=0
 
 [Table][0xC9935533,3]
