--- a/imgui.ini
+++ b/imgui.ini
@@ -44,8 +44,8 @@ Size=800,600
 Collapsed=0
 
 [Window][Login]
-Pos=250,50
-Size=800,600
+Pos=300,150
+Size=700,300
 Collapsed=0
 
 [Window][About Window]
@@ -54,8 +54,23 @@ Size=458,135
 Collapsed=0
 
 [Window][Login Needed!]
-Pos=453,344
-Size=332,75
+Pos=448,268
+Size=482,92
+Collapsed=0
+
+[Window][Privellege Required!]
+Pos=471,293
+Size=300,110
+Collapsed=0
+
+[Window][About Me]
+Pos=536,333
+Size=191,94
+Collapsed=0
+
+[Window][BackgroundWindow]
+Pos=0,25
+Size=1280,775
 Collapsed=0
 
 [Table][0xC9935533,3]
