UI complete.Core 50%

--- a/imgui.ini
+++ b/imgui.ini
@@ -64,13 +64,28 @@ Size=300,110
 Collapsed=0
 
 [Window][About Me]
-Pos=536,333
-Size=191,94
+Pos=740,177
+Size=206,110
 Collapsed=0
 
 [Window][BackgroundWindow]
 Pos=0,25
 Size=1280,775
+Collapsed=0
+
+[Window][In/Out Stock]
+Pos=283,208
+Size=850,260
+Collapsed=0
+
+[Window][add category]
+Pos=350,180
+Size=600,170
+Collapsed=0
+
+[Window][add attribute]
+Pos=350,180
+Size=600,170
 Collapsed=0
 
 [Table][0xC9935533,3]
