--- a/imgui.ini
+++ b/imgui.ini
@@ -59,7 +59,7 @@ Size=482,92
 Collapsed=0
 
 [Window][Privellege Required!]
-Pos=471,293
+Pos=474,293
 Size=300,110
 Collapsed=0
 
@@ -74,7 +74,7 @@ Size=1280,775
 Collapsed=0
 
 [Window][In/Out Stock]
-Pos=283,208
+Pos=296,208
 Size=850,260
 Collapsed=0
 
@@ -86,6 +86,46 @@ Collapsed=0
 [Window][add attribute]
 Pos=350,180
 Size=600,170
+Collapsed=0
+
+[Window][remove category]
+Pos=475,302
+Size=314,156
+Collapsed=0
+
+[Window][remove attr]
+Pos=485,311
+Size=294,138
+Collapsed=0
+
+[Window][add item]
+Pos=350,100
+Size=600,400
+Collapsed=0
+
+[Window][remove item]
+Pos=500,311
+Size=267,138
+Collapsed=0
+
+[Window][stockdetail]
+Pos=240,180
+Size=800,400
+Collapsed=0
+
+[Window][Add User]
+Pos=566,299
+Size=149,162
+Collapsed=0
+
+[Window][remove user]
+Pos=496,311
+Size=271,138
+Collapsed=0
+
+[Window][user information]
+Pos=326,254
+Size=616,252
 Collapsed=0
 
 [Table][0xC9935533,3]
