--- a/LibMan.vcxproj
+++ b/LibMan.vcxproj
@@ -80,12 +80,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)$(Configuration)\</IntDir>
-    <IncludePath>G:\Common\Coding\LibMan\imgui;$(IncludePath)</IncludePath>
+    <IncludePath>G:\Common\Coding\Github\LibMan\imgui;G:\Common\Coding\Github\LibMan\headers;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)$(Configuration)\</IntDir>
-    <IncludePath>G:\Common\Coding\LibMan\headers;G:\Common\Coding\LibMan\imgui;$(IncludePath)</IncludePath>
+    <IncludePath>G:\Common\Coding\Github\LibMan\headers;G:\Common\Coding\Github\LibMan\imgui;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
