--- a/Release/imgui.ini
+++ b/Release/imgui.ini
@@ -8,3 +8,23 @@ Pos=300,150
 Size=700,300
 Collapsed=0
 
+[Window][In/Out Stock]
+Pos=341,250
+Size=600,200
+Collapsed=0
+
+[Window][stockdetail]
+Pos=240,180
+Size=800,400
+Collapsed=0
+
+[Window][edit item]
+Pos=350,180
+Size=600,200
+Collapsed=0
+
+[Window][BackgroundWindow]
+Pos=0,25
+Size=1280,775
+Collapsed=0
+
