--- a/imgui.ini
+++ b/imgui.ini
@@ -128,6 +128,11 @@ Pos=330,254
 Size=616,252
 Collapsed=0
 
+[Window][edit item]
+Pos=350,180
+Size=600,200
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
